# Neurarock

./: README.md  cat.py  pyproject.toml
api_server/: auth.py  main.py  meshy_client.py
tests/: triptest.py
text2three/: base.py  registry.py
text2three/examples/: generate_sample.py
text2three/models/: hunyuan3d_2.py  meshy.py  modelslab.py  shapee.py  tripo3d.py
text2three/output/: A_stuffed_toy_of_a_anthromorphic_bunny_with_a_skull_mask.glb  Futuristic_urban_hub_with_transparent_high-speed_rail_and_green_plaza.glb  a_cucumber_with_legs_dancing.glb  a_man_getting_electricuted.glb  cactus_with_a_hat.glb  chinese_temple.glb  man_getting_electricuted.glb  mug.glb  penis_with_a_gun.glb  puppies_with_a_cowboy_hat.glb  solar_system_representation.glb  viewer.html
text2three/tests/: 3d.py  test_meshy.py  test_meshy_official.py
text2three/text2three/: base.py
text2three/text2three/models/: meshy.py
text2three/viewer/: viewer.py
