[project]
name = "text2three"
version = "0.1.0"
description = "Unified production-ready API library for text-to-3D generation"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "open3d (>=0.19.0,<0.20.0)",
    "trimesh (>=4.6.10,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.12"
pytest = "^8.4.0"

